--- a/static/popup.html
+++ b/static/popup.html
@@ -8,7 +8,28 @@
 
 <body>
   <div class="container">
-    <h1>Hello World!</h1>
+    <div id="credits-column">
+      <label>Credits</label>
+      <input type="number" placeholder="N/A"></input>
+      <input type="number" placeholder="N/A"></input>
+      <input type="number" placeholder="N/A"></input>
+      <input type="number" placeholder="N/A"></input>
+      <input type="number" placeholder="N/A"></input>
+      <input type="number" placeholder="N/A"></input>
+    </div>
+
+    <div id="grade-column">
+      <label>Grade</label>
+      <input type="number" placeholder="N/A"></input>
+      <input type="number" placeholder="N/A"></input>
+      <input type="number" placeholder="N/A"></input>
+      <input type="number" placeholder="N/A"></input>
+      <input type="number" placeholder="N/A"></input>
+      <input type="number" placeholder="N/A"></input>
+    </div>
+
+    <button id="calculate-btn">Calculate</button>
+
   </div>
 
   <script src="popup.js"></script>
