GPA calculate working

--- a/static/popup.html
+++ b/static/popup.html
@@ -8,6 +8,7 @@
 
 <body>
   <div class="container">
+    
     <div id="credits-column">
       <label>Credits</label>
       <input type="number" placeholder="N/A"></input>
@@ -29,6 +30,7 @@
     </div>
 
     <button id="calculate-btn">Calculate</button>
+    <label id="gpa-label"></label>
 
   </div>
 
