GPA label changes colors based on gpa performance

--- a/static/popup.html
+++ b/static/popup.html
@@ -30,7 +30,10 @@
     </div>
 
     <button id="calculate-btn">Calculate</button>
-    <label id="gpa-label"></label>
+
+    <div class="label-div">
+      <label id="gpa-label"></label>
+    </div>
 
   </div>
 
