Added msu logo at top of ui

--- a/static/popup.html
+++ b/static/popup.html
@@ -8,6 +8,7 @@
 
 <body>
   <div class="container">
+    <img src="icons/msu-logo.png" alt="logo" class="logo">
 
     <div id="credits-column">
       <label>Credits</label>
