--- a/static/popup.html
+++ b/static/popup.html
@@ -4,10 +4,16 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="styles/popup.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
 <body>
   <div class="container">
+
+    <button id="help-btn" title="Need Help?">
+      <i class="fa fa-question"></i>
+    </button>
+
     <img src="icons/msu-logo.png" alt="logo" class="logo">
 
     <div id="credits-column">
