Added btn for rating extension

--- a/static/popup.html
+++ b/static/popup.html
@@ -14,7 +14,7 @@
       <i class="fa fa-question"></i>
     </button>
 
-    <img src="icons/msu-logo.png" alt="logo" class="logo">
+    <img src="icons/msu-logo.png" alt="logo" id="logo-btn">
 
     <div id="credits-column">
       <label>Credits</label>
