--- a/static/popup.html
+++ b/static/popup.html
@@ -16,7 +16,7 @@
 
     <img src="icons/msu-logo.png" alt="logo" id="logo-btn">
 
-    <div id="credits-column">
+    <div id="credits-column" class="column">
       <label>Credits</label>
       <input type="number" placeholder="N/A"></input>
       <input type="number" placeholder="N/A"></input>
@@ -26,7 +26,7 @@
       <input type="number" placeholder="N/A"></input>
     </div>
 
-    <div id="grade-column">
+    <div id="grade-column" class="column">
       <label>Grade</label>
       <input type="number" placeholder="N/A"></input>
       <input type="number" placeholder="N/A"></input>
